# sw_architecture_project

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py
app/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
app/auto_models/: __init__.py  auto_model_model.py  repository.py  schemas.py
app/autos/: __init__.py  auto_model.py  repository.py  schemas.py  servise.py
app/brands/: __init__.py  brand_model.py  repository.py  schemas.py
app/rents/: __init__.py  repository.py  schemas.py  tent_model.py
app/users/: __init__.py  repository.py  router.py  schemas.py  service.py  user_model.py
seeds/: seeds.py
